# space_shooter

./: .clang-format  Makefile  a.out  meson.build
lib/includes/: SDL_version.h
src/: app.c  audio.c  draw.c  game.h  init.c  input.c  lib_init.c  main.c  structs.h
